--- a/src/PP/RequestBundle/Resources/views/Request/addRequestForm.html.twig
+++ b/src/PP/RequestBundle/Resources/views/Request/addRequestForm.html.twig
@@ -9,7 +9,7 @@
             <div class="comp-area">
               {{ form_start(form, {'attr': {'class': 'addRequestForm'}})  }}                                            
                 {{ form_row(form.title) }}
-                <div id="requestFormRest" style="display: none;">
+                <div id="requestFormRest" >
                     {{ form_row(form.request) }} 
                     {{ form_row(form.category) }} 
                     {{ form_row(form.tagsStr) }} 
