--- a/src/PP/RequestBundle/Resources/views/Request/sideInfo.html.twig
+++ b/src/PP/RequestBundle/Resources/views/Request/sideInfo.html.twig
@@ -5,7 +5,7 @@
     <ul class="tags">
         {% for tag in popularTags %}    
             <li class="tag">
-                <a target="_self" class="tag-name" href="{{ path('pp_request_homepage', {'page': 1, 'search_query':tag.name }) }}" title="">{{ tag.name }}</a>                
+                <a target="_self" class="tag-name" href="{{ path('pp_request_homepage', {'page': 1, 'tags':tag.name }) }}" title="">{{ tag.name }}</a>                
                 <span class="subject-count">{{tag.usedNb}} sujets</span>
             </li>            
         {% endfor %}
