--- a/src/PP/UserBundle/Resources/views/Profile/show_profile.html.twig
+++ b/src/PP/UserBundle/Resources/views/Profile/show_profile.html.twig
@@ -35,6 +35,7 @@
                         </a>
                     {% else %}
                         {{ form(followForm) }}
+                        {{ form(blockForm) }}
                         {% if is_granted("ROLE_ADMIN") %}
                             {{ form(setModeratorForm) }}
                         {% endif %}
@@ -44,7 +45,10 @@
                             {% else %}
                                 follow
                             {% endif %}
-                        </a>
+                        </a>                        
+                        
+                        <a id="blockButton" class="button follow" ng-click="profile.patchBlock({{ pageProfile.id }})" >{% if isBlocked == true %}unblock{% else %}block{% endif %}</a>
+                       
                     {% endif %} 
                     {# report and delete image request form #}                            
                     {% if is_granted("ROLE_MODERATOR") and isHownProfile == false %}                
